<resources>
    <string name="app_name">plasticPrecios_Grup2</string>
    <string name="enviarButton">INICIA SESIÓN</string>
    <string name="newUserButton">NUEVO USUARIO</string>
    <string name="toast_message">Esta función no está implementada</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label"></string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">activityHome</string>
    <string name="title_activity_inicio">Inicio</string>
    <string name="title_activity_cesta">Cesta</string>
    <string name="clicable_arrow"><![CDATA[>]]></string>
    <string name="settings">Ajustes</string>
    <string name="item_list">Historial de pedidos</string>
    <string name="contact">Ayuda y Contacto</string>
    <string name="exit">Salir</string>
    <string name="userName" translatable="false">Nombre de usuario</string>
    <string name="admin">Administrador</string>
    <string name="user">Usuario</string>
    <string name="creator">Creador</string>
    <string name="dateTxt">Fecha de nacimiento</string>
    <string name="stringProductos">Productos</string>
    <string name="stringPopular">Popular</string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="ubicacion">Donde Estamos?</string>
    <string name="stringRol">Rol</string>
</resources>