<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginEditText"
        android:hint="Usuario"
        android:id="@+id/nameEdit"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginEditText"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:id="@+id/passwordEdit"
        />
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:id="@+id/date"
        android:textSize="24dp"
        android:hint="fecha-mes-año"
        
        />
    <ImageView
        android:id="@+id/datepicker"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_toRightOf="@id/date"
        android:src="@drawable/calendar"/>
</RelativeLayout>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton android:id="@+id/radio_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin"/>
        <RadioButton android:id="@+id/radio_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user" />
        <RadioButton android:id="@+id/radio_creator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/creator" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginButtonSignUp"
        android:text="REGISTRARSE"
        android:id="@+id/signup"
        />



</LinearLayout>