<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundapp"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"

            android:background="@drawable/avatar" />

        <TextView
            android:id="@+id/textViewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="Nombre de usuario"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_gravity="center"
            android:layout_height="60dp"
            android:layout_marginTop="70dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:background="@drawable/configuration_customize_setting_setup_tool_icon_1320086045624971998" />

            <Button
                style="@style/Theme.ButtonProfile"
                android:background="@android:color/transparent"
                android:text="@string/settings"/>

            <Button
                style="@style/Theme.ButtonArrow"
                android:background="@android:color/transparent"
                android:text="@string/clicable_arrow"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_gravity="center"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:background="@drawable/_341764" />

            <Button
                style="@style/Theme.ButtonProfile"
                android:background="@android:color/transparent"
                android:text="@string/item_list" />

            <Button
                style="@style/Theme.ButtonArrow"
                android:background="@android:color/transparent"
                android:text="@string/clicable_arrow"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_gravity="center"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:background="@drawable/minimalist_info_icon" />

            <Button
                style="@style/Theme.ButtonProfile"
                android:background="@android:color/transparent"
                android:text="@string/contact"/>

            <Button
                style="@style/Theme.ButtonArrow"
                android:background="@android:color/transparent"
                android:text="@string/clicable_arrow"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:background="@drawable/minimalist_info_icon" />

            <Button
                android:id="@+id/mapa"
                android:onClick="goMapsActivity"
                style="@style/Theme.ButtonProfile"
                android:background="@android:color/transparent"
                android:text="@string/ubicacion" />

            <Button
                style="@style/Theme.ButtonArrow"
                android:background="@android:color/transparent"
                android:text="@string/clicable_arrow" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="380dp"
            android:layout_gravity="center"
            android:layout_height="60dp"
            android:layout_marginTop="70dp"
            android:onClick="goLogin"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:background="@drawable/_617409" />

            <Button
                style="@style/Theme.ButtonProfile"
                android:background="@android:color/transparent"
                android:text="@string/exit"/>

            <Button
                style="@style/Theme.ButtonArrow"
                android:background="@android:color/transparent"
                android:text="@string/clicable_arrow"/>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>